# ManSciDA-Excel-to-app

./: .gitignore  index.html  pyproject.toml
facility-location-app/: facility-location-problem.xlsx  facility_location.ipynb  index.html  solver_test.py
facility-location-app-v2/: index.html
portfolio-app/: index.html  portfolio-efficient-frontier.xlsx  portfolio.ipynb  solver_test.py
portfolio-app-v2/: index.html  portfolio_v2.ipynb
portfolio-app-v3/: index.html
prompts/: excel-to-html.md  excel-to-notebook.md  expand-facility-location.md  expand-portfolio-v3.md  expand-portfolio.md  notebook-to-html.md
